--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="login.css">
+    <script type="text/javascript" src="https://npmcdn.com/parse/dist/parse.min.js"></script>
   </head>
   <h1 class="title">Welcome to the Shop login portal</h1>
 
